# docloop

./: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml
doc-maker/: Cargo.toml  package.json
doc-maker/src/: lib.rs
src/: App.tsx  index.css
src/components/: button.tsx  image-container.tsx  image-list-display.tsx  image-modal.tsx
src/components/ui/: button.tsx  circle.tsx  image-modal.tsx  link.tsx  modal.tsx
src/hooks/: useDocMaker.ts
src/routes/: about.tsx  home.tsx
web-app/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web-app/src/: App.tsx
web-app/src/components/ui/: button.tsx  container.tsx  separator.tsx
web-app/src/routes/: home.tsx
