[package]
name = "doc-maker"
description="the document maker of the docloop project"
version = "0.1.0"
edition = "2024"
authors = ["in-th3-l00p"]

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.1"
printpdf = "0.8.2"
wasm-bindgen = "0.2.100"
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]
wee_alloc = ["dep:wee_alloc"]